/*
 * Copyright (C) 2017 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";

package android.os.statsd;

option optimize_for = LITE_RUNTIME;

option java_package = "com.android.internal.logging";
option java_outer_classname = "StatsConstantsProto";

enum TagId {
  WAKELOCK = 1;
  SCREEN = 2;
  PROCESS = 1112; // TODO: Temporary usage only for testing.
}

enum KeyId {
  STATE = 1;
  ANOTHER_STATE = 2;
  EVENT_TIMESTAMP = 1001;
  PACKAGE_NAME = 1002;
  PACKAGE_VERSION = 1003;
  PACKAGE_VERSION_STRING = 1004;
  ATTRIBUTION_CHAIN = 1005;
}
